# hooking-api

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
example/: CMakeLists.txt
example/app/: CMakeLists.txt  main.cpp
example/hack/: CMakeLists.txt  hacked.cpp
example/lib/: CMakeLists.txt  version.cpp  version.h
hack/: CMakeLists.txt  hacked.cpp
hook/: CMakeLists.txt
hook/include/hook/: hook.hpp
lib/: version.cpp  version.h
